compiler/testData/diagnostics/tests/controlFlowAnalysis/propertiesOrderInPackage.kt
package a

val a : Int = <!UNINITIALIZED_VARIABLE!>b<!>
val b : Int = a